Change WorkflowData from interface to class (#54)
* Change WorkflowData from interface to class

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Disable flaky test

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Rebase with changes from #38

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>